--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  outline: none;
+  box-sizing: border-box;
+  color: white;
+  font-family: 'Nunito', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #41e2ba;
+  transition: background-color 300ms ease-in-out;
+  line-height: 1.5;
+}
+
+.container {
+  max-width: 640px;
+  margin: 0 auto;
+}
+
+.working {
+  background-color: #ef5d50;
+}
+
+.hidden {
+  display: none;
+}
+
+.pomodoro {
+  background-color: rgba(255, 255, 255, 0.1);
+  margin: 50px 20px;
+  padding: 20px;
+  border-radius: 4px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.pomodoro h2 {
+  font-size: 24px;
+  text-align: center;
+  background: none rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.pomodoro .timer {
+  font-size: 6rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+.pomodoro .controls {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.pomodoro button {
+  cursor: pointer;
+  border: none;
+  margin: 20px 0px 0px;
+  padding: 0px 12px;
+  border-radius: 4px;
+  box-shadow: rgb(235 235 235) 0px 6px 0px;
+  font-size: 22px;
+  height: 55px;
+  color: black;
+  font-weight: bold;
+  width: 100px;
+  background-color: white;
+  transition: color 0.5s ease-in-out 0s;
+}
+
+.pomodoro button:focus {
+  transition: 600ms;
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
+}
+
+.pomodoro .details {
+  text-align: center;
+  margin: 40px 0px 0px;
 }
